# colors

./: .gitignore  Doxyfile  README.md  meson.build
include/: colors.hpp  mainpage.dox  style.hpp
src/: colors.cpp  style.cpp
test/: test_compose.cpp
